Se agrego funcion de subir a el storage de firebase

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
+    android:id="@+id/mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.klaus.pruebafirebase.MainActivity">
@@ -14,7 +14,7 @@
         android:text="Ingresa un nuevo carro a la base de datos NNNNN"
         android:textColor="#272221"
         android:textSize="20sp"
-        android:id="@+id/tvTitulo"
+        android:id="@+id/tvTitulomain"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp" />
 
@@ -25,7 +25,7 @@
         android:layout_height="40dp"
         android:background="#FFFFFF"
         android:hint="Nombre del dueno"
-        android:layout_below="@+id/tvTitulo"
+        android:layout_below="@+id/tvTitulomain"
         android:layout_centerHorizontal="true"
         tools:layout_editor_absoluteY="100dp"
         tools:layout_editor_absoluteX="39dp"
@@ -79,5 +79,17 @@
         android:layout_below="@+id/etRuedas"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp" />
+
+    <Button
+        android:id="@+id/boton_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Agregar un nuevo carro"
+        android:layout_below="@+id/boton_carros"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
+
+
+
 
 </RelativeLayout>
